fixed login and logout not showing up in aside menu

--- a/frontend/src/assets/scss/basics/_layout.scss
+++ b/frontend/src/assets/scss/basics/_layout.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100vh;
   display: grid;
-  grid-template-rows: auto auto auto 1fr auto auto;
+  grid-template-rows: 62px auto auto 1fr auto auto;
   position: relative;
 
   >* {
